basic alignment issue

--- a/src/app/charging/stop-confirmation/stop-confirmation.component.scss
+++ b/src/app/charging/stop-confirmation/stop-confirmation.component.scss
@@ -1,48 +1,29 @@
 .card-box{
-  border-radius: 10px;
-  height: 500px;
-  background-color: #FFFFFF;
+  padding: 0.5rem;
+  text-align: center;
 }
-
 .btn-pay{
-  position: relative;
-  top:10%;
-  margin-top: 50px;
+  font-family: Lexend-Regular;
+  font-size: 1.125rem;
+  font-weight: 600;
   background: #EA7267;
   align-items: center;
-  font: normal normal 600 18px/23px Lexend-Regular;
   border-radius: 4px;
   height: 3rem;
+  margin-top: 3rem;
 }
-
-.image-stop{
-  position: relative;
-  top:10%;
-  align-items: center;
-  margin: auto;
-  width: 250px;
-}
-
 .header{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #273D4C;
-  opacity: 1;
-  padding-top: 20px;
-  font: normal normal 600 26px/33px Lexend-Regular;
-  text-align: center;
-  margin: auto;
+  margin: 1.688rem 0.625rem 0.315rem 1.938rem;
+  font-family: Lexend-Regular;
+  font-size: 1.625rem;
+  font-weight: 600;
+  color: #273d4c;
 }
-
-.last_line{
-  color: #30CF87;
-  text-align: center;
+.btn-no{
   text-decoration: underline;
-  font: normal normal 300 18px/23px Lexend-Regular;
-  letter-spacing: 0px;
+  font-family: Lexend-Regular;
+  font-size: 1.125rem;
+  font-weight: 600;
   color: #30CF87;
-  opacity: 1;
-  z-index: 1;
-  margin-top: 4.5rem;
+  margin-top: 1.5rem;
 }
