--- a/src/global.scss
+++ b/src/global.scss
@@ -143,7 +143,7 @@ height-40{
 }
 .stop-confirm{
   --width: 85%;
-  --height: 60%;
+  --height: 68%;
 }
 .stop-confirm .modal-wrapper{
   border-radius: 9px;
